--- a/css/index.css
+++ b/css/index.css
@@ -2,14 +2,14 @@
     margin: 0;
     padding: 0;
 }
-.bg-image{
+/*.bg-image{
     background: url(../Images/Background/Index.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
     background-attachment: fixed;
-}
+}*/
 .bw-gradient{
     width: 100%;
     height: 100vh;
@@ -22,6 +22,7 @@
     width: 100%;
     height: 70px;
     margin: 0 auto;
+    z-index: 1000;
 }
 .sub-header{
     position: relative;
@@ -69,7 +70,7 @@
 }
 .sub-header ul li a{
     text-decoration: none;
-    color:#fff;
+    color:#000;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 14px;
     letter-spacing: -0.1px;
@@ -165,4 +166,16 @@
         transition: 0.5s;
         border: none;
     }
+}
+
+#carousel .carousel-item img{
+	height: 80vh;
+	width: 100%;
+	background-size: cover;
+}
+
+#carousel .carousel-caption{
+	text-transform: uppercase;
+	color: black;
+	font-family: cursive;
 }
