--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@
     position: absolute;
     background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.65) 11%, rgba(0,0,0,0) 100%);
     background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 11%,rgba(0,0,0,0) 100%);background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 11%,rgba(0,0,0,0) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
+    z-index: 1000;
 }
 .header{
     position: fixed;
@@ -70,7 +71,7 @@
 }
 .sub-header ul li a{
     text-decoration: none;
-    color:#000;
+    color:#fff;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 14px;
     letter-spacing: -0.1px;
