--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,8 @@
     height: 100vh;
     background-attachment: fixed;
 }*/
+
+/*Navbar Starts Here*/
 .bw-gradient{
     width: 100%;
     height: 10vh;
@@ -169,6 +171,14 @@
     }
 }
 
+/*Navbar Ende Here*/
+
+/*Carousel Starts Here*/
+
+#carousel{
+    margin: 0;
+}
+
 #carousel .carousel-item img{
 	height: 80vh;
 	width: 100%;
@@ -180,3 +190,55 @@
 	color: black;
 	font-family: cursive;
 }
+
+/*Carousel Ends Here*/
+
+/*Services Starts Here*/
+
+#services{
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(../Images/Background/Service-Background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff !important;
+    margin-top: 0px;
+    height: 93vh;
+}
+
+#services .container{
+    margin-top: 0px;
+}
+
+#services .services{
+    margin: 90px auto;
+    text-align: center;
+}
+
+#services h1{
+    font-family: sans-serif;
+    letter-spacing: 1px;
+}
+
+#services h1:after{
+    content: '';
+    background: white;
+    display: block;
+    width: 150px;
+    height: 3px;
+    margin: 10px auto;
+}
+
+#services .icon{
+    font-size: 40px;
+    margin: 20px auto;
+    padding: 10px;
+    height: 80px;
+    width: 80px;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+#services .col-md-3:hover{
+    box-shadow: 5px 7px 9px -3px rgba(255,255,255,0.5);
+    cursor: pointer;
+}
+/*Services Ends Here*/
