--- a/css/index.css
+++ b/css/index.css
@@ -242,3 +242,141 @@
     cursor: pointer;
 }
 /*Services Ends Here*/
+
+/*Footer Starts Here*/
+#footer footer{
+    background-color: #353745;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#footer .f-logo{
+    margin: auto;
+    height: 100px;
+    width: 200px;
+}
+
+#footer .up-section ul,#footer .dwn-section ul{
+    font-family: Calibri;
+    margin: 0px;
+    padding: 0px 20px;
+}
+
+#footer .up-section h1,#footer .dwn-section h1{
+    color: #9697A0;
+    font-size: 20px;
+    font-family: Calibri;
+}
+
+#footer .up-section ul li a,#footer .dwn-section ul li a{
+    font-size: 14px;
+    color: #575A70;
+    line-height: 10px;
+}
+
+#footer .up-section,#footer .dwn-section{
+    display: flex;
+    justify-content: space-between;
+    padding: 3% 0px;
+    margin: 5px;
+    width: 80%;
+    flex-wrap: wrap;
+}
+
+#footer .dwn-section{
+    border-top: 1px solid #545562;
+}
+
+#footer .social-icons a{
+    width: 35px;
+    height: 35px;
+    margin: 0px 5px;
+    background-color: #424356;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+}
+
+#footer .social-icons{
+    display: flex;
+}
+
+#footer .search input{
+    height: 35px;
+    width: 200px;
+    text-align: center;
+    border: none;
+    outline: none;
+}
+
+#footer .social-icons i{
+    color: #FFFFFF;
+    font-size: 14px;
+}
+
+#footer .copyright{
+    font-family: Calibri;
+    font-size: 12px;
+    color: #B3B3B3;
+}
+
+#footer .up-section ul li a:hover,#footer .dwn-section ul li a:hover{
+    color: #9697A0;
+}
+
+#footer .social-icons a:hover{
+    background-color: #9A9FF6;
+    transition: all ease 0.5s;
+}
+
+#footer .social-icons a:hover i{
+    color: #424356;
+}
+
+@media(max-width:1024px){
+    #footer{
+        background-color: #0E59F0;
+    }
+    #footer .search{
+        margin: 20px auto;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: center;
+    }
+    #footer .search h1{
+        margin: 20px;
+    }
+}
+
+@media(max-width:720px){
+    #footer .up-section,#footer .dwn-section{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    #footer .up-section ul h1,#footer .dwn-section ul h1{
+        font-size: 25px;
+    }
+    #footer .up-section ul li,#footer .dwn-section ul li{
+        text-align: center;
+        margin: 10px;
+    }
+
+    #footer .up-section ul li a,#footer .dwn-section ul li a{
+        font-size: 20px;
+    }
+
+    #footer .f-logo{
+        border: 1px solid #545562;
+    }
+
+    #footer .search{
+        display: block;
+    }
+}
+/*Footer Ends Here*/
