--- a/css/index.css
+++ b/css/index.css
@@ -2,16 +2,12 @@
     margin: 0;
     padding: 0;
 }
-/*.bg-image{
-    background: url(../Images/Background/Index.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-    background-attachment: fixed;
-}*/
 
 /*Navbar Starts Here*/
+a{
+    text-decoration: none;
+}
+
 .bw-gradient{
     width: 100%;
     height: 10vh;
@@ -243,7 +239,140 @@
 }
 /*Services Ends Here*/
 
+/*Team Section Starts Here*/
+
+#team-section{
+    background-color: #009688;
+    box-sizing: border-box;
+    height: auto;
+    padding: 70px 15px;
+    font-family: 'OPen Sans',sans-serif;
+}
+
+#team-section .container{
+    max-width: 1170px;
+    margin: 0;
+}
+
+#team-section .row{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+#team-section .section-title{
+    flex-basis: 100%;
+    max-width: 100%;
+    margin-bottom: 70px;
+}
+
+#team-section .section-title h1{
+    font-size: 40px;
+    text-align: center;
+    margin: 0;
+    color: #FFFFFF;
+    font-weight: 700;
+}
+
+#team-section .section-title p{
+    font-size: 16px;
+    text-align: center;
+    margin: 15px 0 0;
+    color: #FFFFFF;
+}
+
+#team-section .team-items{
+    flex-basis: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#team-section .team-items .items{
+    flex-basis: calc(25% - 30px);
+    max-width: calc(25% - 30px);
+    transition: all 0.5s ease;
+}
+
+#team-section .team-items .items img{
+    display: block;
+    width: 100%;
+    border-radius: 8px;
+    height: auto;
+}
+
+#team-section .team-items .items .inner{
+    position: relative;
+    z-index: 11;
+    padding: 0 15px;
+
+}
+
+#team-section .team-items .items .inner .info{
+    background-color: #009688;
+    text-align: center;
+    padding: 20px 15px;
+    border-radius: 8px;
+    transition: all 0.5s ease;
+    margin-top: -40px;
+}
+
+#team-section .team-items .items:hover .info{
+    transform: translateY(-20px);
+}
+
+#team-section .team-items .items:hover{
+    transform: translateY(-10px);   
+}
+
+#team-section .team-items .items .inner .info h5{
+    margin: 0;
+    font-size: 18px;
+    font-weight: 600; 
+    color: #FFFFFF;
+}
+
+#team-section .team-items .items .inner .info h5:hover{
+    color: #F95700FF;
+    transition: all 0.5s ease;
+}
+
+#team-section .team-items .items .inner .info p{
+    font-size: 14px;
+    font-weight: 400;
+    color: #c5c5c5;
+    margin: 10px 0 0;
+}
+
+#team-section .team-items .items .inner .info .social-links{
+    padding-top: 15px;
+}
+
+#team-section .team-items .items .inner .info .social-links a{
+    display: inline-block;
+    height: 32px;
+    width: 32px;background-color: #ffffff;
+    color: #009688;
+    border-radius: 50%;
+    margin: 0 2px;
+    text-align: center;
+    line-height: 32px;
+    font-size: 16px;
+    transition: all .5s ease;
+}
+
+#team-section .team-items .items .inner .info .social-links a:hover{
+    box-shadow: 0 0 10px #000;
+}
+
+/*Team Section Ends Here*/
+
 /*Footer Starts Here*/
+#footer{
+    height: auto;
+}
+
 #footer footer{
     background-color: #353745;
     box-sizing: border-box;
